# calc

./: .gitignore  Cargo.toml
artifacts/: astroport_calc.wasm  astrovault_calc.wasm  astrovault_calc_v2.wasm  checksums.txt  checksums_intermediate.txt  dca.wasm  fin.wasm  fund_core.wasm  fund_factory.wasm  fund_router.wasm  osmosis.wasm  staking_router.wasm  swap.wasm  swapper.wasm
contracts/compound-child/: Cargo.toml
contracts/compound-manager/: Cargo.toml
contracts/compounder-manager/: Cargo.toml  README.md
contracts/dca/: Cargo.toml  (+1 more)
contracts/exchanges/astroport/: Cargo.toml  README.md
contracts/exchanges/astroport/src/: contract.rs  lib.rs  msg.rs
contracts/exchanges/astroport/src/handlers/: get_expected_receive_amount.rs  get_twap_to_now.rs  mod.rs  swap.rs
contracts/exchanges/astroport/src/state/: cache.rs
contracts/exchanges/astroport/src/tests/: constants.rs
contracts/exchanges/astrovault/: Cargo.toml
contracts/exchanges/astrovault/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/exchanges/astrovault/src/handlers/: get_expected_receive_amount.rs  get_pairs.rs  get_twap_to_now.rs  swap.rs
contracts/exchanges/astrovault/src/state/: pairs.rs  routes.rs
contracts/exchanges/astrovault/src/tests/: constants.rs  mod.rs
contracts/exchanges/astrovault/src/types/: config.rs
integration-tests/: .env.example  .mocharc.json  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  setup_and_run_kujirad.sh  tsconfig.json
scripts/: optimizer.sh
tests/: .env  config.yml  package-lock.json  package.json  snapshots.ts
(+376 files in other folders)
