[package]
name = "astrovault-calc-v2"
version = "0.0.1"
authors = ["James Gaddum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astrovault = "0.1.2"
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

shared = { workspace = true }
exchange = { workspace = true }
exchange-macros = { workspace = true }
